[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["yngcrovi <crovion@gemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.6"
aioredis = "1.3.1"
alembic = "1.13.3"
annotated-types = "0.7.0"
anyio = "4.7.0"
async-timeout = "4.0.3"
certifi = "2024.12.14"
click = "8.1.8"
dnspython = "2.7.0"
ecdsa = "0.19.0"
email-validator = "2.2.0"
exceptiongroup = "1.2.2"
fastapi-cache2 = "0.2.2"
fastapi-cli = "0.0.7"
fastapi-filter = "2.0.0"
greenlet = "3.0.3"
h11 = "0.14.0"
hiredis = "3.0.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.5"
jose = "1.0.0"
mako = "1.3.5"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
orjson = "3.10.13"
passlib = "1.7.4"
pendulum = "3.0.0"
psycopg = "3.2.1"
psycopg2-binary = "2.9.9"
pyasn1 = "0.6.0"
pydantic = "2.10.4"
pydantic-extra-types = "2.10.1"
pydantic-settings = "2.7.1"
pydantic-core = "2.27.2"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
redis = "4.6.0"
rich = "13.9.4"
rich-toolkit = "0.12.0"
rsa = "4.9"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
starlette = "0.41.3"
time-machine = "2.14.2"
typer = "0.15.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
ujson = "5.10.0"
uvicorn = "0.34.0"
uvloop = "0.21.0"
watchfiles = "1.0.3"
websockets = "14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
